* Fixes to ADC implementation, see http://developer.berlios.de/projects/ddc/ for a 
  somewhat compatible hub in development
* Some linux patches (thanks tim burton)
* PgUp/PgDn now scroll the chat window (thanks jonathan stone)
* Small fix with line history (thanks jonathan stone)
* Added option to use separate TCP and UDP ports

-- 0.667 2004-11-15 --
* Improved multiple hublist support (thanks garg)
* Fixed some favdirs issues (thanks naga)
* Fixed a status logging issue (thanks naga)
* [bug 289] Fixed annoying login issue
* Added possibility to rename shares (thanks naga and tremor)
* [bug 106] Fixed show joins for fav users (thanks ullner)
* Fixed some unnecessary connects when download slots are full
* Fixed magnet registration issue (thanks garg)
* Some code documentation work (thanks jonathan jansson)
* Makedefs.py fixes (thanks garg)
* A connection attempt is made when you grant a slot to potentially start the other 
  fella's transfers (thanks sed)
* Fixed passive search results issue with international nicks (thanks garg)
* Fixed search frame extension vs tth again
* FAQ added to the help file (thanks bsod)
* Upgraded to zlib 1.2.2, fixing a security issue (thanks garg)
* Added %[file] to the transfer view user commands (thanks naga)
* Fixed myinfo update issue (thanks sulan)
* Added option to use only up/down for command line history (thanks jonathan stone)
* Improved installer (thanks bsod)
* Fixed so that a connection attempt is made when changing a transfer to highest priority

-- 0.666 2004-11-03 --
* [bug 173] Fixed copy nick to clipboard (thanks trem)
* Removed some old code (thanks garg)
* Added tth to log codes (thanks garg)
* Added # of locally filtered results to search frame (thanks garg)
* Fixed a crash in the upnp code
* Fixed wide formatting of time (thanks garg)
* [bug 166] Added local filtering of searches with "-" in front of the search term (thanks cologic)
* Fixed a missing hubframe stats bug (thanks trem)